--- a/chatapp/templates/chatapp/index.html
+++ b/chatapp/templates/chatapp/index.html
@@ -1,4 +1,4 @@
 <h1>List of Roooms</h1>
 {% for chatroom in chatrooms %}
-    <a href="">{{chatroom}}</a> </br>
+    <a href="{% url 'chatroom' chatroom.slug %}">{{chatroom}}</a> </br>
 {% endfor %}
