--- a/chatapp/templates/chatapp/room.html
+++ b/chatapp/templates/chatapp/room.html
@@ -1,2 +1,6 @@
 {{chatroom.name}}
 
+<form method="post">
+    <input type="text" name="message" placeholder="Enter message">
+    <button type="submit">Send</button>
+</form>
