--- a/chatapp/templates/chatapp/room.html
+++ b/chatapp/templates/chatapp/room.html
@@ -4,3 +4,21 @@
     <input type="text" name="message" placeholder="Enter message">
     <button type="submit">Send</button>
 </form>
+
+{{ chatroom.slug | json_script:"json-chatroomname" }}
+<script>
+    const chatRoomName = JSON.parse(document.getElementById('json-chatroomname').textContent)
+    const chatSocket = new WebSocket(
+        'ws://'
+        +window.location.host
+        +'/ws/'
+        +chatRoomName
+        +'/'
+    )
+    chatSocket.onmessage=function(e){
+        console.log('This is a message')
+    }
+    chatSocket.onclose=function(e){
+        console.log('Socket closed')
+    }
+</script>
