--- a/chatapp/templates/chatapp/room.html
+++ b/chatapp/templates/chatapp/room.html
@@ -1,13 +1,15 @@
 {{chatroom.name}}
-
+<div id="chat-messages"></div>
 <form method="post">
-    <input type="text" name="message" placeholder="Enter message">
-    <button type="submit">Send</button>
+    <input id="message-input" type="text" name="message" placeholder="Enter message">
+    <button id="send-button" type="submit">Send</button>
 </form>
 
 {{ chatroom.slug | json_script:"json-chatroomname" }}
+{{ request.user.username | json_script:"json-username" }}
 <script>
     const chatRoomName = JSON.parse(document.getElementById('json-chatroomname').textContent)
+    const username = JSON.parse(document.getElementById('json-username').textContent)
     const chatSocket = new WebSocket(
         'ws://'
         +window.location.host
@@ -16,9 +18,32 @@
         +'/'
     )
     chatSocket.onmessage=function(e){
-        console.log('This is a message')
+        // console.log('This is a message')
+        const data = JSON.parse(e.data)
+        if(data.message){
+            console.log('Received message to client is', data.message)
+            let html = data.username + ':' + data.message + '</br>'
+            document.getElementById('chat-messages').innerHTML += html
+        }else{
+            alert('The message was empty!')
+        }
     }
     chatSocket.onclose=function(e){
         console.log('Socket closed')
+    }
+
+    document.getElementById('send-button').onclick = function(e){
+        e.preventDefault()
+        const messageInput = document.getElementById('message-input')
+        const message = messageInput.value
+        console.log(message)
+
+        chatSocket.send(JSON.stringify({
+            'message' : message,
+            'username' : username,
+            'room' : chatRoomName
+        }))
+
+        messageInput.value = ""
     }
 </script>
