display message and formatting

--- a/chatapp/templates/chatapp/room.html
+++ b/chatapp/templates/chatapp/room.html
@@ -1,5 +1,9 @@
 {{chatroom.name}}
-<div id="chat-messages"></div>
+<div id="chat-messages">
+    {% for message in messages %}
+        {{message.user.username}} : {{message.message_content}} </br>
+    {% endfor %}
+</div>
 <form method="post">
     <input id="message-input" type="text" name="message" placeholder="Enter message">
     <button id="send-button" type="submit">Send</button>
@@ -22,7 +26,7 @@
         const data = JSON.parse(e.data)
         if(data.message){
             console.log('Received message to client is', data.message)
-            let html = data.username + ':' + data.message + '</br>'
+            let html = data.username + ' : ' + data.message + '</br>'
             document.getElementById('chat-messages').innerHTML += html
         }else{
             alert('The message was empty!')
