--- a/chatapp/templates/chatapp/index.html
+++ b/chatapp/templates/chatapp/index.html
@@ -1,4 +1,7 @@
+{% extends 'chatapp/base.html' %}
+{% block body %}
 <h1>List of Roooms</h1>
 {% for chatroom in chatrooms %}
     <a href="{% url 'chatroom' chatroom.slug %}">{{chatroom}}</a> </br>
 {% endfor %}
+{% endblock %}
