final touches before open source

--- a/chatapp/templates/chatapp/room.html
+++ b/chatapp/templates/chatapp/room.html
@@ -1,15 +1,29 @@
 {% extends 'chatapp/base.html' %}
 {% block body %}
-{{chatroom.name}}
-<div id="chat-messages">
-    {% for message in messages %}
-        {{message.user.username}} : {{message.message_content}} </br>
-    {% endfor %}
+<div class="m-10 font-bold">
+    {{chatroom.name}}
 </div>
-<form method="post">
-    <input id="message-input" type="text" name="message" placeholder="Enter message">
-    <button id="send-button" type="submit">Send</button>
-</form>
+<div class="message-container m-10 overflow-auto h-[700px]" id="message-container">
+    <div id="chat-messages">
+        {% for message in messages %}
+        <div class="message shadow-lg p-3 m-3 rounded-lg w-1/2 bg-blue-300">
+            <div class="text-sm text-gray-500">
+                {{message.user.username}}
+            </div>
+            {{message.message_content}}
+            <div class="text-sm text-gray-500">
+                {{message.date}}
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+</div>
+<div class="form-container fixed inset-x-0 bottom-0 bg-blue-900 p-4">
+    <form method="post">
+        <input class="rounded-md px-2 bg-white focus:outline-none" id="message-input" type="text" name="message" placeholder="Enter message...">
+        <button class="text-white ml-5" id="send-button" type="submit">Send</button>
+    </form>
+</div>
 
 {{ chatroom.slug | json_script:"json-chatroomname" }}
 {{ request.user.username | json_script:"json-username" }}
@@ -28,9 +42,11 @@
         const data = JSON.parse(e.data)
         if(data.message){
             console.log('Received message to client is', data.message)
-            let html = data.username + ' : ' + data.message + '</br>'
+            let html = '<div class="message shadow-lg p-3 m-3 rounded-lg w-1/2 bg-blue-300">' + '<div class="text-sm text-gray-500">' + data.username + ' </div>' + data.message + '<div class="text-sm text-gray-500">' + 'Now' + '</div>'
             document.getElementById('chat-messages').innerHTML += html
-        }else{
+            scroll();
+        }
+        else{
             alert('The message was empty!')
         }
     }
@@ -52,5 +68,11 @@
 
         messageInput.value = ""
     }
+
+    function scroll(){
+        const mcontainer = document.getElementById('message-container')
+        mcontainer.scrollTop = mcontainer.scrollHeight
+    }
+    scroll()
 </script>
 {% endblock %}
