--- a/chatapp/templates/chatapp/index.html
+++ b/chatapp/templates/chatapp/index.html
@@ -1,7 +1,9 @@
 {% extends 'chatapp/base.html' %}
 {% block body %}
-<h1>List of Roooms</h1>
+<h1 class="font-bold m-10">List of Roooms</h1>
 {% for chatroom in chatrooms %}
-    <a href="{% url 'chatroom' chatroom.slug %}">{{chatroom}}</a> </br>
+    <div class="shadow-lg p-10 m-10 bg-blue-900 text-white rounded-lg">
+        <a href="{% url 'chatroom' chatroom.slug %}">{{chatroom}}</a> </br>
+    </div>
 {% endfor %}
 {% endblock %}
